Fixed the navbar to make it visible when scrolling down

--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,19 @@ body {
 /* ----------------- NAV BAR ----------------*/
 .navbar {
     background: rgb(253, 247, 255);
+    overflow: hidden;
+    position: fixed;
+    /* Set the navbar to fixed position */
+    top: 0;
+    /* Position the navbar at the top of the page */
+    width: 100%;
+    z-index: 2;
 }
 
 .navbar .container-fluid img {
     height: 30px;
     border-radius: 20px;
+    transition: top 0.3s;
 }
 
 .custombar {
@@ -107,12 +115,15 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: justify;
+    z-index: -1;
+    
 }
 
 .foto img {
     border-radius: 50%;
     height: 250px;
     border: 5px solid rgba(171, 56, 209, 0.5);
+    z-index: -1;
 }
 
 /* ----------------------- EXPERIENCE ---------------------------- */
